добавил ховер и фокус в секцию кнопок

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,8 @@
             <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
         </ul>
     </header>
-    <main>   
+    <main> 
+        <h1>portfolio</h1>
     <section class="section-button"><!--меню кнопок-->
             <button class="button-current" type="button">Все</button>
             <button class="button" type="button">Веб-сайты</button>
