--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../HTML часть 2/CSS/style.css">
+    <title>WebStudio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
     <header class="page-header">
@@ -13,8 +16,8 @@
         <nav>
             <a class="logo-header" href="#" rel="">WebStudio</a>
             <ul class="sate-nav list">
-                <li><a href="#" class="link-current">Студия</a></li>
-                <li><a href="../HTML часть 2/portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="index.html" class="link-current">Студия</a></li>
+                <li><a href="../goit-markup-hw-02/portfolio.html" class="link">Портфолио</a></li>
                 <li><a href="#" class="link">Контакты</a></li>
             </ul>
         </nav>
@@ -71,7 +74,7 @@
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./image/img03.png" alt="Николай Тарасов" width="270"/>
+                <img src="./image/photo03.jpg" alt="Николай Тарасов" width="270"/>
                 <h3 class="name">Николай Тарасов</h3>
                 <p>Marketing</p>
             </li>
