--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 
@@ -15,7 +17,7 @@
         <nav>
             <a class="logo-header" href="#" rel="">WebStudio</a>
         <ul class="sate-nav list">
-            <li ><a href="../HTML часть 1/index.html" class="link">Студия</a></li>
+            <li ><a href="../goit-markup-hw-02/index.html" class="link">Студия</a></li>
             <li><a href="./portfolio.html" class="link-current">Портфолио</a></li>
             <li><a href="#" class="link">Контакты</a></li>
         </ul>
@@ -27,13 +29,13 @@
     </header>
     <main> 
         <h1>portfolio</h1>
-    <section class="section-button"><!--меню кнопок-->
+    <div class="section-button"><!--меню кнопок-->
             <button class="button-current" type="button">Все</button>
             <button class="button" type="button">Веб-сайты</button>
             <button class="button" type="button">Маркетинг</button>
             <button class="button" type="button">Приложения</button>
             <button class="button" type="button">Дизайн</button>
-    </section>
+    </div>
     <section class="section"><!--фото меню-->
         <ul>
             <li>
