--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>WebStudio</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header class="page-header">
@@ -16,7 +16,7 @@
             <a class="logo-header" href="#" rel="">WebStudio</a>
             <ul class="sate-nav list">
                 <li><a href="index.html" class="link-current">Студия</a></li>
-                <li><a href="../goit-markup-hw-02/portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
                 <li><a href="#" class="link">Контакты</a></li>
             </ul>
         </nav>
@@ -32,7 +32,7 @@
     </section>
     <section class="section"><!--Основной контент-->        
         <h2 class="section-main">Наши преимущества</h2>
-        <ul>
+        <ul class="main">
             <li>
                 <h3 class="section-title">Внимание к деталям</h3>
                 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -53,7 +53,7 @@
     </section>
     <section><!--Чем мы занимаемся-->
         <h2 class="section-main">Чем мы занимаемся</h2>
-        <ul>
+        <ul class="main">
             <li><img class="section-img"src="./image/img1.1.png" alt="планшет и клавиатура" width="370"/></li>
             <li><img class="section-img"src="./image/img1.2.png" alt="телефон и ноутбук" width="370"/></li>
             <li><img class="section-img"src="./image/img1.3.png" alt="планшет" width="370"/></li>
@@ -61,7 +61,7 @@
     </section>
     <section>
         <h2 class="section-main">Наша команда</h2>
-        <ul>
+        <ul class="main">
             <li>
                 <img src="./image/photo01.jpg" alt="Игорь Демьяненко" width="270"/>
                 <h3 class="name">Игорь Демьяненко</h3>
@@ -88,7 +88,7 @@
         <footer class="footer">
             <a class="logo-footer" href="#">WebStudio</a>
             <address>
-                <ul>
+                <ul class="main">
                     <li><a class="address" href="г. Киев, пр-т Леси Украинки, 26">г. Киев, пр-т Леси Украинки, 26</li>
                     <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
