--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <title>Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <nav>
             <a class="logo-header" href="#" rel="">WebStudio</a>
         <ul class="sate-nav list">
-            <li ><a href="../goit-markup-hw-02/index.html" class="link">Студия</a></li>
+            <li ><a href="./index.html" class="link">Студия</a></li>
             <li><a href="./portfolio.html" class="link-current">Портфолио</a></li>
             <li><a href="#" class="link">Контакты</a></li>
         </ul>
@@ -28,68 +28,68 @@
         </ul>
     </header>
     <main> 
+    <section class="section">
         <h1>portfolio</h1>
-    <div class="section-button"><!--меню кнопок-->
-            <button class="button-current" type="button">Все</button>
-            <button class="button" type="button">Веб-сайты</button>
-            <button class="button" type="button">Маркетинг</button>
-            <button class="button" type="button">Приложения</button>
-            <button class="button" type="button">Дизайн</button>
-    </div>
-    <section class="section"><!--фото меню-->
-        <ul>
-            <li>
-                <img class="section-img" src="./image/img01.jpg" alt="img01" width="370"/>
-                <h3 class="section-title">Технокряк</h3>
-                <p>Веб-сайт</p>
-            </li>
-            <li>
-                <img class="section-img" src="./image/img02.jpg" alt="img02" width="370"/>
-                <h3 class="section-title">Постер New Orlean vs Golden Star</h3>
-                <p>Дизайн</p>
-            </li>
-            <li>
-                <img class="section-img" src="./image/img03.jpg" alt="img03" width="370"/>
-                <h3 class="section-title">Ресторан Seafood</h3>
-                <p>Приложение</p>
-            </li>
-            <li>
-                <img class="section-img" src="./image/img04.jpg" alt="img04" width="370"/>
-                <h3 class="section-title">Проект Prime</h3>
-                <p>Маркетинг</p>
-            </li>
-            <li>
-                <img class="section-img" src="./image/img05.jpg" alt="img05" width="370"/>
-                <h3 class="section-title">Проект Boxes</h3>
-                <p>Приложение</p>
-            </li>
-            <li>
-                <img class="section-img" src="./image/img06.jpg" alt="img06" width="370"/>
-                <h3 class="section-title">Inspiration has no Borders</h3>
-                <p>Веб-сайт</p>
-            </li>
-            <li>
-                <img class="section-img" src="./image/img07.jpg" alt="img07" width="370"/>
-                <h3 class="section-title">Издание Limited Edition</h3>
-                <p>Дизайн</p>
-            </li>
-            <li>
-                <img src="./image/img08.jpg" alt="img08" width="370"/>
-                <h3 class="section-title">Проект LAB</h3>
-                <p>Маркетинг</p>
-            </li>
-            <li>
-                <img src="./image/img09.jpg" alt="img09" width="370"/>
-                <h3 class="section-title">Growing Business</h3>
-                <p>Приложение</p>    
-            </li>
-        </ul>
+    <ul class="main"><!--меню кнопок-->
+            <li><button class="button-current" type="button">Все</button></li>
+            <li><button class="button" type="button">Веб-сайты</button></li>
+            <li><button class="button" type="button">Маркетинг</button></li>
+            <li><button class="button" type="button">Приложения</button></li>
+            <li><button class="button" type="button">Дизайн</button></li>
+    </ul>    
+    <ul class="main">
+        <li>
+            <img class="section-img" src="./image/img01.jpg" alt="img01" width="370"/>
+            <h2 class="section-title">Технокряк</h2>
+            <p>Веб-сайт</p>
+        </li>
+        <li>
+            <img class="section-img" src="./image/img02.jpg" alt="img02" width="370"/>
+            <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
+            <p>Дизайн</p>
+        </li>
+        <li>
+            <img class="section-img" src="./image/img03.jpg" alt="img03" width="370"/>
+            <h2 class="section-title">Ресторан Seafood</h2>
+            <p>Приложение</p>
+        </li>
+        <li>
+            <img class="section-img" src="./image/img04.jpg" alt="img04" width="370"/>
+            <h2 class="section-title">Проект Prime</h2>
+            <p>Маркетинг</p>
+        </li>
+        <li>
+            <img class="section-img" src="./image/img05.jpg" alt="img05" width="370"/>
+            <h2 class="section-title">Проект Boxes</h2>
+            <p>Приложение</p>
+        </li>
+        <li>
+            <img class="section-img" src="./image/img06.jpg" alt="img06" width="370"/>
+            <h2 class="section-title">Inspiration has no Borders</h2>
+            <p>Веб-сайт</p>
+        </li>
+        <li>
+            <img class="section-img" src="./image/img07.jpg" alt="img07" width="370"/>
+            <h2 class="section-title">Издание Limited Edition</h2>
+            <p>Дизайн</p>
+        </li>
+        <li>
+            <img src="./image/img08.jpg" alt="img08" width="370"/>
+            <h2 class="section-title">Проект LAB</h2>
+            <p>Маркетинг</p>
+        </li>
+        <li>
+            <img src="./image/img09.jpg" alt="img09" width="370"/>
+            <h2 class="section-title">Growing Business</h2>
+            <p>Приложение</p>    
+        </li>
+    </ul>
     </section>
     </main>
         <footer class="footer">
             <a class="logo-footer" href="#">WebStudio</a>
             <address>
-            <ul>
+            <ul class="main">
                 <li><a class="address" href="г. Киев, пр-т Леси Украинки, 26">г. Киев, пр-т Леси Украинки, 26</li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
