--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="page-header">
         <!--шапка макета-->
         <nav>
-            <a class="logo-header" href="#" rel="">WebStudio</a>
+            <a class="logo-header" href="#" rel="">Web<span class="logo-black">Studio</span></a>
             <ul class="sate-nav list">
                 <li><a href="index.html" class="link-current">Студия</a></li>
                 <li><a href="./portfolio.html" class="link">Портфолио</a></li>
@@ -35,19 +35,19 @@
         <ul class="main">
             <li>
                 <h3 class="section-title">Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li>
                 <h3 class="section-title">Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
             <li>
                 <h3 class="section-title">Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li>
                 <h3 class="section-title">Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
     </section>
@@ -65,28 +65,28 @@
             <li>
                 <img src="./image/photo01.jpg" alt="Игорь Демьяненко" width="270"/>
                 <h3 class="name">Игорь Демьяненко</h3>
-                <p>Product Designer</p>
+                <p class="text-name">Product Designer</p>
             </li>
             <li>
                 <img src="./image/photo02.jpg" alt="Ольга Репина" width="270"/>
                 <h3 class="name">Ольга Репина</h3>
-                <p>Frontend Developer</p>
+                <p class="text-name">Frontend Developer</p>
             </li>
             <li>
                 <img src="./image/photo03.jpg" alt="Николай Тарасов" width="270"/>
                 <h3 class="name">Николай Тарасов</h3>
-                <p>Marketing</p>
+                <p class="text-name">Marketing</p>
             </li>
             <li>
                 <img src="./image/photo04.jpg" alt="Михаил Ермаков" width="270"/>
                 <h3 class="name">Михаил Ермаков</h3>
-                <p>UI Designer</p>
+                <p class="text-name">UI Designer</p>
             </li>
         </ul>
     </section>
     </main>
         <footer class="footer">
-            <a class="logo-footer" href="#">WebStudio</a>
+            <a class="logo-footer" href="#">Web<span class="logo-white">Studio</span></a>
             <address>
                 <ul class="main">
                     <li><a class="address" href="г. Киев, пр-т Леси Украинки, 26">г. Киев, пр-т Леси Украинки, 26</li>
