--- a/portfolio.html
+++ b/portfolio.html
@@ -41,47 +41,47 @@
         <li>
             <img class="section-img" src="./image/img01.jpg" alt="img01" width="370"/>
             <h2 class="section-title">Технокряк</h2>
-            <p>Веб-сайт</p>
+            <p class="text-portfolio">Веб-сайт</p>
         </li>
         <li>
             <img class="section-img" src="./image/img02.jpg" alt="img02" width="370"/>
             <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <p class="text-portfolio">Дизайн</p>
         </li>
         <li>
             <img class="section-img" src="./image/img03.jpg" alt="img03" width="370"/>
             <h2 class="section-title">Ресторан Seafood</h2>
-            <p>Приложение</p>
+            <p class="text-portfolio">Приложение</p>
         </li>
         <li>
             <img class="section-img" src="./image/img04.jpg" alt="img04" width="370"/>
             <h2 class="section-title">Проект Prime</h2>
-            <p>Маркетинг</p>
+            <p class="text-portfolio">Маркетинг</p>
         </li>
         <li>
             <img class="section-img" src="./image/img05.jpg" alt="img05" width="370"/>
             <h2 class="section-title">Проект Boxes</h2>
-            <p>Приложение</p>
+            <p class="text-portfolio">Приложение</p>
         </li>
         <li>
             <img class="section-img" src="./image/img06.jpg" alt="img06" width="370"/>
             <h2 class="section-title">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <p class="text-portfolio">Веб-сайт</p>
         </li>
         <li>
             <img class="section-img" src="./image/img07.jpg" alt="img07" width="370"/>
             <h2 class="section-title">Издание Limited Edition</h2>
-            <p>Дизайн</p>
+            <p class="text-portfolio">Дизайн</p>
         </li>
         <li>
             <img src="./image/img08.jpg" alt="img08" width="370"/>
             <h2 class="section-title">Проект LAB</h2>
-            <p>Маркетинг</p>
+            <p class="text-portfolio">Маркетинг</p>
         </li>
         <li>
             <img src="./image/img09.jpg" alt="img09" width="370"/>
             <h2 class="section-title">Growing Business</h2>
-            <p>Приложение</p>    
+            <p class="text-portfolio">Приложение</p>    
         </li>
     </ul>
     </section>
