--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
         </ul>
         </nav>
         <ul class="auth-nav">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+            <li><a class="nav-current" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="nav" href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main> 
@@ -87,13 +87,14 @@
     </section>
     </main>
         <footer class="footer">
-            <a class="logo-footer" href="#">WebStudio</a>
+            <a class="logo-footer" href="#">Web<span class="logo-white">Studio</span></a>
             <address>
-            <ul class="main">
-                <li><a class="address" href="г. Киев, пр-т Леси Украинки, 26">г. Киев, пр-т Леси Украинки, 26</li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
-            </ul>
+                <ul class="main">
+                    <li><a class="address" href="г. Киев, пр-т Леси Украинки, 26">г. Киев, пр-т Леси Украинки, 26</li>
+                    <li><a class="nav-foter" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="nav-foter" href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+                </ul>
             </address>
-        </footer>   
-</body>   
+        </footer>
+        </body>
+</html>
