--- a/index.html
+++ b/index.html
@@ -5,96 +5,99 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href=https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header class="page-header">
-        <!--шапка макета-->
+    <header class="page-header">  <!--шапка макета-->
+    <div class="container">
         <nav>
             <a class="logo-header" href="#" rel="">Web<span class="logo-black">Studio</span></a>
-            <ul class="sate-nav list">
-                <li><a href="index.html" class="link-current">Студия</a></li>
-                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                <li><a href="#" class="link">Контакты</a></li>
+            <ul class="site-nav list">
+                <li><a href="index.html" class="site-nav-link current">Студия</a></li>
+                <li><a href="./portfolio.html" class="site-nav-link">Портфолио</a></li>
+                <li><a href="#" class="site-nav-link">Контакты</a></li>
             </ul>
         </nav>
-        <ul class="auth-nav">
-            <li><a class="nav-current" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="nav" href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+        <ul class="auth-nav list">
+            <li><a class="auts-nav-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="auts-nav-link" href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
         </ul>
+    </div>
     </header>
     <main>
     <section class="section-hero">
         <h1 class="title">Эффективные решения <br> для вашего бизнеса</h1>
         <button class="button-hero"type="button">Заказать услугу</button>    
     </section>
+    <div class="container">
     <section class="section"><!--Основной контент-->        
-        <h2 class="section-main">Наши преимущества</h2>
-        <ul class="main">
+        <h2 class="section-title">Наши преимущества</h2>
+        <ul class="benefits list">
             <li>
-                <h3 class="section-title">Внимание к деталям</h3>
-                <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                <h3 class="benefits-title">Внимание к деталям</h3>
+                <p class="benefits-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li>
-                <h3 class="section-title">Пунктуальность</h3>
-                <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <h3 class="benefits-title">Пунктуальность</h3>
+                <p class="benefits-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
             <li>
-                <h3 class="section-title">Планирование</h3>
-                <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <h3 class="benefits-title">Планирование</h3>
+                <p class="benefits-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li>
-                <h3 class="section-title">Современные технологии</h3>
-                <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <h3 class="benefits-title">Современные технологии</h3>
+                <p class="benefits-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
     </section>
     <section><!--Чем мы занимаемся-->
-        <h2 class="section-main">Чем мы занимаемся</h2>
-        <ul class="main">
-            <li><img class="section-img"src="./image/img1.1.png" alt="планшет и клавиатура" width="370"/></li>
-            <li><img class="section-img"src="./image/img1.2.png" alt="телефон и ноутбук" width="370"/></li>
-            <li><img class="section-img"src="./image/img1.3.png" alt="планшет" width="370"/></li>
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="benefits list">
+            <li><img class=""src="./image/img1.1.png" alt="планшет и клавиатура" width="370"/></li>
+            <li><img class=""src="./image/img1.2.png" alt="телефон и ноутбук" width="370"/></li>
+            <li><img class=""src="./image/img1.3.png" alt="планшет" width="370"/></li>
         </ul>
     </section>
     <section>
-        <h2 class="section-main">Наша команда</h2>
-        <ul class="main">
-            <li>
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="portfolio list">
+            <li class="portfolio-item">
                 <img src="./image/photo01.jpg" alt="Игорь Демьяненко" width="270"/>
-                <h3 class="name">Игорь Демьяненко</h3>
-                <p class="text-name">Product Designer</p>
+                <h3 class="portfolio-name">Игорь Демьяненко</h3>
+                <p class="portfolio-text">Product Designer</p>
             </li>
             <li>
                 <img src="./image/photo02.jpg" alt="Ольга Репина" width="270"/>
-                <h3 class="name">Ольга Репина</h3>
-                <p class="text-name">Frontend Developer</p>
+                <h3 class="portfolio-name">Ольга Репина</h3>
+                <p class="portfolio-text">Frontend Developer</p>
             </li>
             <li>
                 <img src="./image/photo03.jpg" alt="Николай Тарасов" width="270"/>
-                <h3 class="name">Николай Тарасов</h3>
-                <p class="text-name">Marketing</p>
+                <h3 class="portfolio-name">Николай Тарасов</h3>
+                <p class="portfolio-text">Marketing</p>
             </li>
             <li>
                 <img src="./image/photo04.jpg" alt="Михаил Ермаков" width="270"/>
-                <h3 class="name">Михаил Ермаков</h3>
-                <p class="text-name">UI Designer</p>
+                <h3 class="portfolio-name">Михаил Ермаков</h3>
+                <p class="portfolio-text">UI Designer</p>
             </li>
         </ul>
     </section>
+    </div>
     </main>
         <footer class="footer">
             <a class="logo-footer" href="#">Web<span class="logo-white">Studio</span></a>
             <address>
-                <ul class="main">
+                <ul class="footer-item">
                     <li><a class="address" href="г. Киев, пр-т Леси Украинки, 26">г. Киев, пр-т Леси Украинки, 26</li>
                     <li><a class="nav-foter" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li><a class="nav-foter" href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
                 </ul>
             </address>
-        </footer>
+        </footer>  
 </body>
 </html>
